[SPARTA-552][WEB]: Allow user to create a policy without any cube

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -83,6 +83,7 @@
 <script src="scripts/directives/c-tag-list-directive.js"></script>
 <script src="scripts/directives/c-accordion-directive.js"></script>
 <script src="scripts/directives/c-slider-section-directive.js"></script>
+<script src="scripts/directives/c-animated-msg-directive.js"></script>
 <!-- Factories ----------------------------------- -->
 <script src="scripts/factories/fragment-factory.js"></script>
 <script src="scripts/factories/template-factory.js"></script>
